--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,9 @@
-sudo : required
+language: ruby
+install:
+  - gem uninstall bundler
+  - gem install bundler --version '1.7.4'
+os:
+  - linux
 services: 
   - docker
 
@@ -7,3 +12,4 @@ before_install:
 
 script:
   - docker run justicea83/docker-react npm run test -- --coverage
+  - "rake"
