--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,12 @@
 language: ruby
-install:
-  - gem uninstall bundler
-  - gem install bundler --version '1.7.4'
 os:
   - linux
 services: 
   - docker
 
 before_install:
+  - gem install bundler --pre
   - docker build -t justicea83/docker-react -f Dockerfile.dev .
 
 script:
   - docker run justicea83/docker-react npm run test -- --coverage
-  - "rake"
