--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,9 @@
-language: ruby
-os:
-  - linux
+sudo: required
 services: 
   - docker
 
 before_install:
-  - gem install bundler --pre
   - docker build -t justicea83/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run justicea83/docker-react npm run test -- --coverage
+  - docker run -e CI=true justicea83/docker-react npm run test
